--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,15 +4,18 @@
     <section class="select-pins">
       <div>
         <span class="title">Roll One</span>
-        <button class="btn" *ngFor="let roll of rollOne; let i" (click)="rollOneChange(roll)">{{i}}</button>
+        <button class="btn" id="rollOne-{{i}}" *ngFor="let roll of rollOne; let i"
+          (click)="rollOneChange(roll)">{{i}}</button>
       </div>
       <div *ngIf="rollTwo.length">
         <span class="title">Roll Two</span>
-        <button class="btn" *ngFor="let roll of rollTwo; let i" (click)="rollTwoChange(roll)">{{i}}</button>
+        <button class="btn" id="rollTwo-{{i}}" *ngFor="let roll of rollTwo; let i"
+          (click)="rollTwoChange(roll)">{{i}}</button>
       </div>
       <div *ngIf="rollThree.length">
         <span class="title">Roll Three</span>
-        <button class="btn" *ngFor="let roll of rollThree; let i" (click)="rollThreeChange(roll)">{{i}}</button>
+        <button class="btn" id="rollThree-{{i}}" *ngFor="let roll of rollThree; let i"
+          (click)="rollThreeChange(roll)">{{i}}</button>
       </div>
     </section>
   </section>
@@ -20,12 +23,12 @@
     <div class="frame" *ngFor="let item of frames">
       <div class="title">{{item.frame + 1}}</div>
       <div class="content">
-        <div class="roll" *ngFor="let roll of item.roll; let i">
+        <div class="roll" *ngFor="let roll of item.roll">
           <span>{{roll.hit}}</span>
         </div>
 
       </div>
-      <div class="total">{{item.score}}</div>
+      <div class="total" id="total-{{item.frame}}">{{item.score}}</div>
     </div>
   </section>
 </div>
