--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,17 +2,17 @@
   <section class="container">
     <section class="display-pins"></section>
     <section class="select-pins">
-      <div>
+      <div *ngIf="isFirstAttempt && !rollThree.length">
         <span class="title">Roll One</span>
         <button class="btn" id="rollOne-{{i}}" *ngFor="let roll of rollOne; let i"
-          (click)="rollOneChange(roll)">{{i}}</button>
+          (click)="rollOneChange(roll); ">{{i}}</button>
       </div>
-      <div *ngIf="rollTwo.length">
+      <div *ngIf="!isFirstAttempt">
         <span class="title">Roll Two</span>
         <button class="btn" id="rollTwo-{{i}}" *ngFor="let roll of rollTwo; let i"
           (click)="rollTwoChange(roll)">{{i}}</button>
       </div>
-      <div *ngIf="rollThree.length">
+      <div *ngIf="rollThree.length && isLastAttempt">
         <span class="title">Roll Three</span>
         <button class="btn" id="rollThree-{{i}}" *ngFor="let roll of rollThree; let i"
           (click)="rollThreeChange(roll)">{{i}}</button>
