--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,9 +7,13 @@
   box-sizing: border-box;
 }
 
+$outer-border-color: black;
+$frame-border-color: black;
+$roll-border-color: black;
+
 .wrapper {
   margin: 0 auto;
-  border: 1px solid black;
+  border: 1px solid $outer-border-color;
   height: 95vh;
   width: 95vw;
   display: flex;
@@ -21,20 +25,20 @@
   display: flex;
   flex-direction: column;
   height: 120px;
+  width: 420px;
+  justify-content: flex-start;
 
-  .title {
-    display: inline-block;
-    width: 80px;
-    border: 1px solid green;
-  }
   .btn {
     padding: 5px;
     margin: 5px;
   }
 }
 
+.final-score {
+  text-align: center;
+}
+
 .score-board {
-  border: 1px solid red;
   width: 90vw;
   height: 30vh;
   margin-top: 20vh;
@@ -42,7 +46,7 @@
   flex-direction: row;
 
   .frame {
-    border: 1px solid green;
+    border: 1px solid $frame-border-color;
     width: 9vw;
     height: 100%;
     display: flex;
@@ -51,24 +55,23 @@
     .title {
       height: 15%;
       width: 100%;
-      margin: 0 auto;
       text-align: center;
     }
 
     .content {
       height: 70%;
-      border: 1px solid brown;
       display: flex;
       flex-direction: row;
 
       .roll {
         width: 50%;
-        border: 1px solid brown;
+        border: 1px solid $roll-border-color;
       }
     }
 
     .total {
       height: 15%;
+      text-align: center;
     }
   }
 }
